--- a/Sand.csproj
+++ b/Sand.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MemoryPack" Version="1.21.4" />
     <PackageReference Include="Raylib-cs" Version="7.0.1" />
   </ItemGroup>
 
